# locked-in

./: README.md  latest.json  package-lock.json  package.json
scripts/: release.ps1
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 011_refboard.sql  013_jam.sql  014_tasks.sql
src-tauri/src/: lib.rs
src/components/: BadgeModal.tsx  Blocker.tsx  Canvas.tsx  Chat.tsx  Checkin.tsx  Confirm.tsx  Friends.tsx  FriendsBar.tsx  Goals.tsx  Groups.tsx  Habits.tsx  Home.tsx  Icons.tsx  JamPrompt.tsx  JamRoom.tsx  KeyBackup.tsx  Legal.tsx  Log.tsx  Login.tsx  Mascot.tsx  Onboarding.tsx  Overlay.tsx  Popup.tsx  Profile.tsx  Ranking.tsx  Refboard.tsx  Settings.tsx  Splash.tsx  Stats.tsx  Status.tsx  Tasks.tsx  Titlebar.tsx  Week.tsx
src/hooks/: useFocusSession.ts  useGroups.ts  useJam.ts  useSocial.ts
src/lib/: chat.ts  cloud.ts  db.ts  e2e.ts  groups.ts  i18n.ts  quotes.ts  score.ts  sharecard.ts  social.ts
supabase/: social.sql
