[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
chrono = "0.4"
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
# must ride the same libsqlite3-sys (0.30) that tauri-plugin-sql's sqlx already links
rusqlite = "0.32"
sha2 = "0.10.9"
winreg = "0.56.0"
base64 = "0.22.1"

[dependencies.windows]
version = "0.61"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
  "Win32_Security_Cryptography",
]
